# samplemod.pybind11

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  setup.py
cmake/: summary.cmake
docs/: conf.py
sample/: __init__.py  cli.py
src/sample/: __init__.py  core.py  cpp2py_export.cc  module.cc  module.h  sample.cc  sample.h
tests/: test_basic.py
